WebCore/accessibility/AccessibilityObject.h
@@ -169,7 +169,8 @@ enum AccessibilityRole {
     TreeItemRole,
     DirectoryRole,
     EditableTextRole,
-    
+    ListItemRole,
+
     // ARIA Grouping roles
     LandmarkApplicationRole,
     LandmarkBannerRole,
