WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -3114,14 +3114,28 @@ String AccessibilityRenderObject::descriptionForMSAA() const
     return String();
 }
 
+static AccessibilityRole msaaRoleForRenderer(const RenderObject* renderer)
+{
+    if (!renderer)
+        return UnknownRole;
+
+    if (renderer->isText())
+        return EditableTextRole;
+
+    if (renderer->isListItem())
+        return ListItemRole;
+
+    return UnknownRole;
+}
+
 AccessibilityRole AccessibilityRenderObject::roleValueForMSAA() const
 {
     if (m_roleForMSAA != UnknownRole)
         return m_roleForMSAA;
 
-    if (m_renderer && m_renderer->isText())
-        m_roleForMSAA = EditableTextRole;
-    else
+    m_roleForMSAA = msaaRoleForRenderer(m_renderer);
+
+    if (m_roleForMSAA == UnknownRole)
         m_roleForMSAA = m_role;
 
     return m_roleForMSAA;
